--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,76 +10,77 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/preloader.css" />
     <link rel="stylesheet" href="./styles/error.css" />
-  </head>
-  <body class="page">
+</head>
+
+<body class="page">
     <main class="content">
-      <section class="result">
-        <div class="result__video-container">
-          <video src="" controls class="result__video" poster=""></video>
-        </div>
-        <form class="search-form">
-          <fieldset class="search-form__fieldset">
-            <h2 class="search-form__fieldset-title">Город</h2>
-            <label class="search-form__label">
+        <section class="result">
+            <div class="result__video-container">
+                <video src="" controls muted class="result__video" poster=""></video>
+            </div>
+            <form class="search-form">
+                <fieldset class="search-form__fieldset">
+                    <h2 class="search-form__fieldset-title">Город</h2>
+                    <label class="search-form__label">
               <span class="search-form__label-text visually-hidden">Город</span>
               <input
                 type="text"
                 placeholder="Санкт Петербург, например"
                 name="city"
-                class="search-form__textfield"
+                class="search-form__textfield search-form__label"
               />
             </label>
-          </fieldset>
-          <fieldset class="search-form__fieldset">
-            <h2 class="search-form__fieldset-title">Время суток</h2>
-            <div class="search-form__checkbox-list">
-              <label class="search-form__label">
+                </fieldset>
+                <fieldset class="search-form__fieldset">
+                    <h2 class="search-form__fieldset-title">Время суток</h2>
+                    <div class="search-form__checkbox-list">
+                        <label class="search-form__label">
                 <input
                   type="checkbox"
                   name="time"
                   value="morning"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox visually-hidden search-form__label"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Утро</span>
               </label>
-              <label class="search-form__label">
+                        <label class="search-form__label">
                 <input
                   type="checkbox"
                   name="time"
                   value="afternoon"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox visually-hidden search-form__label"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">День</span>
               </label>
-              <label class="search-form__label">
+                        <label class="search-form__label">
                 <input
                   type="checkbox"
                   name="time"
                   value="night"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox visually-hidden search-form__label"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Ночь</span>
               </label>
-            </div>
-          </fieldset>
-          <button type="submit" class="button search-form__submit-button">
+                    </div>
+                </fieldset>
+                <button type="submit" class="button search-form__submit-button">
             Найти
           </button>
-        </form>
-      </section>
-      <section class="content__details">
-        <h1 class="title">
-          <span class="content__accent">По-</span><br />смотри<br />в окно
-        </h1>
-        <div class="content__list-container">
-          <ul class="content__list">
-            <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
-          </ul>
-        </div>
-      </section>
+            </form>
+        </section>
+        <section class="content__details">
+            <h1 class="title">
+                <span class="content__accent">По-</span><br />смотри<br />в окно
+            </h1>
+            <div class="content__list-container">
+                <ul class="content__list">
+                    <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!-- ТЕМПЛЕЙТЫ -->
@@ -117,5 +119,6 @@
       </div>
     </template>
     <script src="./scripts/script.js"></script>
-  </body>
+</body>
+
 </html>
